Reduced the min height for the site body to avoid too much blank space.

--- a/css/mantis.css
+++ b/css/mantis.css
@@ -61,7 +61,7 @@ div.genericbox h3 {
 
 div#site {
 	width: 610px;
-        min-height: 600px;
+    min-height: 300px;
 	margin: 30px auto 0 auto;
 }
 
